--- a/css/main.css
+++ b/css/main.css
@@ -8,9 +8,10 @@ body
 #main
 {
     font-family: Book Antiqua;
-    margin: 20px auto 0px;  
+    margin: 0px auto 0px;  
     width: 940px;
-    padding-top: 5px;
+    padding-top: 120px;
+    position: relative;
     /*margin-bottom: 65px;*/
 }
 h1, h2, h3, h4
@@ -24,19 +25,29 @@ h1, h2, h3, h4
 h1
 {
     font-size: 24px;
-    /*padding-bottom: 40px;*/
-/*    border-bottom: 2px dashed #edefee;*/
     color: #edefee;
-    display: block;
     width: -moz-min-content;
     width: -webkit-min-content;
-    width: min-content;;
+    width: min-content;
     margin: 0px auto;
     white-space: nowrap;
     float: right;
-    position: absolute;
-    top: 15px;
-    right: 26px;
+    margin-right: 30px;
+    margin-top: 25px;
+    position: relative;
+}
+h1 a img
+{
+    display: inline-block;
+    width: 16px;
+    height: 16px;
+    margin-left: 10px;
+    border: 1px solid transparent;
+    z-index: 2000;
+}
+h1 img:hover
+{
+    border: 1px solid #aaa;
 }
 h2
 {
@@ -48,43 +59,11 @@ header
 {
     width: 100%;
     background-color: #006cad;
-    padding: 50px 0px 10px;
-    height: 32px;
-}
-
-footer
-{
-    width: 100%;
-    background-color: #006cad;
-    clear: both;
-    position: relative;
-    z-index: 10;
-    height: 15px;
-    margin: -120px auto 0px;
-    text-align: center;
-    padding: 20px 0px;
-    line-height: 100%
-}
-footer a
-{
-    font-family: Century Gothic;
-    text-align: center;
-    color: #edefee;
-    text-decoration: none;
-    background: none;
-}
-footer a:hover
-{
-    color: #cdcfce;
-/*    text-shadow: 0px 0px 2px #000;
-    -webkit-text-shadow: 0px 0px 2px #000;
-    -moz-text-shadow: 0px 0px 2px #000;
-*/}
-nav
-{
-    padding: 20px;    
-    border-top: 1px solid #006cad;
-    background-color: white;
+    padding: 0px 0px 5px;
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    z-index: 1000;
 }
 .shaded
 {
@@ -169,39 +148,101 @@ nav
 {
     color: #003c8d;
 }
-.backLink, .delLink
+nav
 {
-    margin-left: 5px;
-    margin-right: 5px;
-    margin-top: -5px;
-    padding: 5px 10px 5px 40px;
+    position: relative;
+    width: -moz-min-content;
+    width: -webkit-min-content;
+    width: min-content;
+    white-space: nowrap;
+}
+nav ol 
+{
+    margin-left: 0px;
+    margin-left: 15px;
+    margin-bottom: -5px;
+    list-style-type: none;
+    counter-reset: li;
+    display: inline-block;
+    border-bottom: 3px solid #5FB4D9;
+}
+nav a
+{
+    padding: 10px 20px 15px 50px;
     font-family: century Gothic;
     text-transform: uppercase;
     text-decoration: none;
     color: white;
-    line-height: 30px;
-    height: 30px;
+    line-height: 45px;
+    height: 45px;
     position: relative;
-    border-radius: 3px;
+    display: block;
+    border-bottom: 3px solid #5FB4D9;
+    margin-bottom: -3px;
 }
-.backLink
+nav a.current
 {
-    float: left;
+    /*border-bottom: 3px solid ;*/
 }
-.backLink:first-of-type
+nav ol a:before{
+    content: counter(li);
+    counter-increment: li;
+    position: absolute; 
+    left: 50%;
+    transform: translate(-50%,0);
+    bottom: -16px;
+    margin-top: -1.3em;
+    background: #5FB4D9;
+    height: 1.5em;
+    width: 1.5em;
+    line-height: 1.5em;
+    font-size: 1em;
+    border: .2em solid #5FB4D9;
+    text-align: center;
+    border-radius: 1em;
+    transition: all .3s ease-out;
+    z-index: 100;
+}
+nav ol a.current:before{
+    background: #FFD469;
+    color: #666;
+}
+nav ol li
 {
-    margin-left: 15px;
+    display: inline-block;
+    position: relative;
+    
 }
-.backLink:last-of-type
+nav li:first-of-type:before, nav li:last-of-type:after
 {
-    margin-right: 15px;
+    display: block;
+    height: 3px;
+    width: 50%;
+    background: #006cad;
+    position: absolute;
+    bottom: -3px;
+    z-index: 50;
+    content: " ";
 }
+nav li:first-of-type:before
+{
+    left: 0;
+}
+nav li:last-of-type:after
+{
+    right: 0;
+}
+nav li:first-of-type:hover:before, nav li:last-of-type:hover:after
+{
+    background: #006;
+}
+
 .delLink:not(#delConfirm)
 {
     float: right;
     margin-right: 15px;
 }
-.backLink:hover
+nav a:hover
 {
     background: #006;
 }
@@ -209,12 +250,11 @@ nav
 {
     background: #600;
 }
-
-.backLink img, .delLink img
+nav a img
 {
     position: absolute;
-    top: 8px;
-    left: 10px;
+    top: 18px;
+    left: 15px;
 }
 #delConfirm
 {
@@ -253,5 +293,19 @@ nav
     background: #666;
     color: white;
     /*border: 1px solid red;*/
+}
+#noElectionWarning
+{
+    position: absolute;
+    left: 50%;
+    top: 30%;
+    transform: translate(-50%,-50%);
+    padding: 20px;
+    background: white;
+    border: 1px solid #600;
+    box-shadow: 0px 0px 4px #666;
+    -webkit-box-shadow: 0px 0px 4px #666;
+    -moz-box-shadow: 0px 0px 8px #666;
+
 }
 
