--- a/css/main.css
+++ b/css/main.css
@@ -32,11 +32,11 @@ h1
     margin: 0px auto;
     white-space: nowrap;
     float: right;
-    margin-right: 30px;
+    margin-right: 60px;
     margin-top: 25px;
     position: relative;
 }
-h1 a img
+/*h1 a img
 {
     display: inline-block;
     width: 16px;
@@ -44,11 +44,7 @@ h1 a img
     margin-left: 10px;
     border: 1px solid transparent;
     z-index: 2000;
-}
-h1 img:hover
-{
-    border: 1px solid #aaa;
-}
+}*/
 h2
 {
     margin-top: 30px;
@@ -239,8 +235,10 @@ nav li:first-of-type:hover:before, nav li:last-of-type:hover:after
 
 .delLink:not(#delConfirm)
 {
-    float: right;
-    margin-right: 15px;
+    position: absolute;
+    top: -6px;
+    right: -40px;
+    padding: 5px 10px 8px;
 }
 nav a:hover
 {
@@ -259,14 +257,17 @@ nav a img
 #delConfirm
 {
     position: absolute;
-    top: 55px;
-    right: 15px;
+    top: 35px;
+    right: -40px;
     display: block;
     width: 240px;
     height: 80px;
     background: #000;
     /*border: 1px solid black;*/
     font-family: century Gothic;
+    font-size: 14px;
+    white-space: normal;
+    font-weight: normal;
     text-align: center;
     padding: 10px;
     color: white;
