--- a/css/main.css
+++ b/css/main.css
@@ -103,6 +103,7 @@ header
     -moz-border-radius: 3px;
     border-radius:  3px;
     margin: 5px;
+    position: relative;
 }
 .myList h2 
 {
@@ -307,6 +308,25 @@ nav a img
     box-shadow: 0px 0px 4px #666;
     -webkit-box-shadow: 0px 0px 4px #666;
     -moz-box-shadow: 0px 0px 8px #666;
+
+}
+.addLink
+{
+    position: absolute;
+    right: 2px;
+    top: 64px;
+    height: 40px;
+    width: 40px;
+    padding: 0px;
+    background-image: url("../img/plusGreen.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-color: #eee;
+}
+.addLink:hover
+{
+    background-image: url("../img/plusWhite.png");
+    background-color: #00BA61;
 
 }
 
